tests/specs/ConstDeclaration.txt
# mod.ts
export const Const = 0;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:1:14
  | 
1 | export const Const = 0;
  |              ^

# output.txt
Defined in file:///mod.ts:1:14

const Const: 0


# output.json
[
  {
    "kind": "variable",
    "name": "Const",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 13,
      "byteIndex": 13
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "0",
        "kind": "literal",
        "literal": {
          "kind": "number",
          "number": 0.0
        }
      },
      "kind": "const"
    }
  }
]
